--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,7 +28,7 @@ stages:
   jobs:
       - deployment: deployDEV
         displayName: Deploy package to DEV Orchestrator
-        pool: UiPath
+        pool: Azure-UIP
         environment: DEV_no_approvals
         strategy:
          runOnce:
