--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -81,8 +81,14 @@ stages:
   - job: DeployToTestJob
     pool:
       name: Azure-UIP
+      environment:
+       name: PRD_approval_required
+      strategy:
+          runOnce:
+          deploy:
     workspace:
       clean: all
+     
     steps:
     - download: current
       artifact: drop
