Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -82,8 +82,8 @@ stages:
     pool:
       name: Azure-UIP
       
-      environment: PRD_approval_requiredd
-      strategy:
+      environment: PRD_approval_required
+      strategy:    
           runOnce:
             deploy:
     workspace:
