--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ stages:
       - deployment: deployDEV
         displayName: Deploy package to DEV Orchestrator
         pool: Azure-UIP
-        environment: DEV_no_approvals
+        environment: PRD_approval_required
         strategy:
          runOnce:
           deploy:
