Update azure-pipelines-6.yml for Azure Pipelines

--- a/azure-pipelines-6.yml
+++ b/azure-pipelines-6.yml
@@ -20,7 +20,7 @@ stages:
         versionType: 'AutoVersion'
         projectJsonPath: '$(Build.SourcesDirectory)/process/XXX-test-load/project.json'
         outputType: 'Process'
-        orchestratorConnection: 'Azure-Devops-integration'
+        orchestratorConnection: 'zohan-lab'
         outputPath: '$(Build.ArtifactStagingDirectory)Output'
 
 - stage: DEV
