Update azure-pipelines-6.yml for Azure Pipelines

--- a/azure-pipelines-6.yml
+++ b/azure-pipelines-6.yml
@@ -95,6 +95,6 @@ stages:
             artifact: drop
           - task: UiPathDeploy@3
             inputs:
-             orchestratorConnection: 'Azure-Devops-integration'
+             orchestratorConnection: 'zohan-lab'
              packagesPath: '$(Pipeline.Workspace)\drop'
              folderName: Shared
