--- a/azure-pipelines-6.yml
+++ b/azure-pipelines-6.yml
@@ -84,6 +84,8 @@ stages:
     displayName: deploy Web App
     pool:
       name: Azure-UIP
+      workspace:
+      clean: all
     # creates an environment if it doesn't exist
     environment: 'smarthotel-dev1'
     strategy:
