Update azure-pipelines-6.yml for Azure Pipelines

--- a/azure-pipelines-6.yml
+++ b/azure-pipelines-6.yml
@@ -86,11 +86,11 @@ stages:
   - job: DeployToTestJob
     pool:
       name: Azure-UIP
-      
       environment: production
       strategy:    
           runOnce:
             deploy:
+  - job: clearWorkspace
     workspace:
       clean: all
      
