--- a/azure-pipelines-6.yml
+++ b/azure-pipelines-6.yml
@@ -88,7 +88,7 @@ stages:
   - job: DeployToTestJob
     pool:
       name: Azure-UIP
-      environment: 'smarthotel-Production'
+      environment: smarthotel-Production
       strategy:
         runOnce:
         deploy:
