Update azure-pipelines-6.yml for Azure Pipelines

--- a/azure-pipelines-6.yml
+++ b/azure-pipelines-6.yml
@@ -102,3 +102,16 @@ stages:
         orchestratorConnection: 'zohan-lab'
         packagesPath: '$(Pipeline.Workspace)\drop'
         folderName: Shared
+- stage: deploy-Server
+  jobs:
+  - deployment: DeployWeb
+    displayName: deploy Web App
+    pool:
+      name: Azure-UIP
+    # creates an environment if it doesn't exist
+    environment: 'smarthotel-dev'
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - script: echo Hello world
