Update azure-pipelines-6.yml for Azure Pipelines

--- a/azure-pipelines-6.yml
+++ b/azure-pipelines-6.yml
@@ -83,12 +83,14 @@ stages:
 
 - stage: deploy_Server
   jobs:
-  - deployment: DeployWeb
+  - deployment: DeployPRD
     displayName: deploy Web App
+    dependsOn: TstDeploy
+    condition: succeeded()
     pool:
       name: Azure-UIP
     # creates an environment if it doesn't exist
-    environment: 'production'
+    environment: 'Production_Server'
     strategy:
       runOnce:
         deploy:
